--- a/app/wheelTracker/wheelTracker/Base.lproj/Main.storyboard
+++ b/app/wheelTracker/wheelTracker/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,7 +21,7 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DayPush" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ifS-ze-Ba7">
                                         <rect key="frame" x="99.333333333333329" y="0.0" width="191.33333333333337" height="151.66666666666666"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" red="0.15294117647058825" green="0.15686274509803921" blue="0.062745098039215685" alpha="0.70666287131483851" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nDn-DZ-1nU">
@@ -37,19 +36,19 @@
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Km" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gsy-Iw-vXm" userLabel="Distance">
                                                 <rect key="frame" x="0.0" y="0.0" width="77.666666666666671" height="26.333333333333332"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" red="0.15294117647058825" green="0.15686274509803921" blue="0.062745098039215685" alpha="0.74304366440000003" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Calories" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7QA-wy-buG" userLabel="Calories">
                                                 <rect key="frame" x="107.66666666666669" y="0.0" width="77.666666666666686" height="26.333333333333332"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" red="0.15294117647058825" green="0.15686274509803921" blue="0.062745098039215685" alpha="0.70666287131483851" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Dc-rA-biN" userLabel="Duration">
                                                 <rect key="frame" x="215.33333333333334" y="0.0" width="77.666666666666657" height="26.333333333333332"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" red="0.15294117647058825" green="0.15686274509803921" blue="0.062745098039215685" alpha="0.70666287131483851" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
@@ -57,7 +56,12 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fc8-RQ-LZp">
                                         <rect key="frame" x="159.66666666666666" y="604" width="71" height="113"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                        <state key="normal" title="앨범 보기"/>
+                                        <state key="normal" title="앨범 보기">
+                                            <color key="titleColor" red="0.5450980392" green="0.41176470590000003" blue="0.4941176471" alpha="0.74304366440000003" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <segue destination="lz6-Xc-rLO" kind="showDetail" id="Vbs-Zd-0ao"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -68,7 +72,7 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="secondarySystemGroupedBackgroundColor"/>
+                        <color key="backgroundColor" red="0.99215686274509807" green="0.99607843137254903" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="AwN-CU-Sgq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="UrL-Bm-2wo"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="AwN-CU-Sgq" secondAttribute="bottom" id="eN0-h8-fif"/>
@@ -89,6 +93,49 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="815" y="256"/>
+        </scene>
+        <!--Album View Controller-->
+        <scene sceneID="zaN-X4-kE3">
+            <objects>
+                <viewController id="lz6-Xc-rLO" customClass="AlbumViewController" customModule="wheeltracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BJp-Dz-Mm1">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Zow-zY-jTj">
+                                <rect key="frame" x="8" y="297" width="374" height="361"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <viewLayoutGuide key="contentLayoutGuide" id="Irb-Ov-pRR"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="uDy-Fi-9eq"/>
+                            </scrollView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="tc7-eg-AVL">
+                                <rect key="frame" x="135" y="697" width="121" height="27"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </pageControl>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3 월" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V7a-CO-VS7">
+                                <rect key="frame" x="0.0" y="150" width="390" height="60"/>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="50"/>
+                                <color key="textColor" red="0.15294117647058825" green="0.15686274509803921" blue="0.062745098039215685" alpha="0.70666287131483851" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="0te-FL-PuE"/>
+                        <color key="backgroundColor" red="0.99215686274509807" green="0.99607843137254903" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="V7a-CO-VS7" firstAttribute="top" secondItem="0te-FL-PuE" secondAttribute="top" constant="150" id="243-yi-CYf"/>
+                            <constraint firstItem="V7a-CO-VS7" firstAttribute="trailing" secondItem="0te-FL-PuE" secondAttribute="trailing" id="MKz-kd-sXn"/>
+                            <constraint firstItem="V7a-CO-VS7" firstAttribute="leading" secondItem="0te-FL-PuE" secondAttribute="leading" id="twg-Dj-BdV"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="monthLabel" destination="V7a-CO-VS7" id="per-FM-zcb"/>
+                        <outlet property="pageControl" destination="tc7-eg-AVL" id="xoP-vd-lTm"/>
+                        <outlet property="scrollView" destination="Zow-zY-jTj" id="X6F-O1-kRB"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lQm-gl-cL0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1713.8461538461538" y="255.92417061611374"/>
         </scene>
         <!--Record-->
         <scene sceneID="tgi-7a-LvA">
@@ -136,8 +183,5 @@
     <resources>
         <image name="homekit" catalog="system" width="128" height="106"/>
         <image name="pencil" catalog="system" width="128" height="113"/>
-        <systemColor name="secondarySystemGroupedBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
